--- a/app/src/main/res/layout/activity_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_form_cadastro.xml
@@ -65,7 +65,7 @@
         android:textSize="22dp"
         android:textStyle="bold"
         android:layout_margin="40dp"
-        android:text="Tudo pronto para \n assistir?"/>
+        android:text="Tudo pronto para conferir \n o melhor do cinema?"/>
     <TextView
         android:id="@+id/txtDescricao"
         android:layout_width="match_parent"
