ajustes no layout login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="red">#FF0000</color>
     <color name="dark_gray">#181818</color>
     <color name="blue">#0013BB</color>
+    <color name="black_transparent">#D0000000</color>
 
 
 
