--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -1,116 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.FormLogin"
-    android:background="@color/black"
-    android:orientation="vertical">
+    android:scaleType="centerCrop">
     <ImageView
-        android:layout_marginTop="50dp"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logoappfilme"
-        android:layout_gravity="center"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/containerEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        app:hintAnimationEnabled="true"
-        android:textColorHint="@color/white"
-        app:boxStrokeColor="@color/box_stroke"
-        app:hintTextColor="@color/white"
-        app:boxStrokeWidth="2dp"
-        app:errorEnabled="true"
-        app:helperTextEnabled="true"
-        app:helperTextTextColor="@color/red"
-        app:cursorColor="@color/red"
-        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
-        >
+        android:layout_height="match_parent"
+        android:src="@drawable/bakgroud_filme"
+        android:scaleType="centerCrop"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editEmail"
+        <ScrollView android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            app:boxStrokeWidth="2dp"
-            android:padding="25dp"
-            app:boxStrokeColor="@color/white"
-            android:hint="Email"
-            android:outlineAmbientShadowColor="@color/white"
-            android:inputType="textEmailAddress"
-            />
+            tools:context=".view.FormLogin"
+            android:gravity="center"
+            android:background="@drawable/rounded_corners"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:src="@drawable/logoappfilme"
+                android:layout_gravity="center"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/containerEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="40dp"
+                app:hintAnimationEnabled="true"
+                android:textColorHint="@color/white"
+                app:boxStrokeColor="@color/box_stroke"
+                app:hintTextColor="@color/white"
+                app:boxStrokeWidth="2dp"
+                app:errorEnabled="true"
+                app:helperTextEnabled="true"
+                app:helperTextTextColor="@color/red"
+                app:cursorColor="@color/red"
+                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
+                >
 
-    </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    app:boxStrokeWidth="2dp"
+                    android:padding="25dp"
+                    app:boxStrokeColor="@color/white"
+                    android:hint="Email"
+                    android:outlineAmbientShadowColor="@color/white"
+                    android:inputType="textEmailAddress"
+                    />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/containerSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        app:hintAnimationEnabled="true"
-        android:layout_marginTop="20dp"
-        android:textColorHint="@color/white"
-        app:boxStrokeColor="@color/box_stroke"
-        app:hintTextColor="@color/white"
-        app:boxStrokeWidth="2dp"
-        app:cursorColor="@color/red"
-        app:errorEnabled="true"
-        app:helperTextEnabled="true"
-        app:helperTextTextColor="@color/red"
-        app:endIconMode="password_toggle"
-        app:endIconDrawable="@drawable/baseline_visibility_24"
-        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox">
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editSenha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:padding="25dp"
-            android:hint="Senha"
-            android:textColorHint="@color/white"
-            android:textColorHighlight="@color/white"
-            android:inputType="textPassword"
-            />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/containerSenha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="40dp"
+                app:hintAnimationEnabled="true"
+                android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
+                app:boxStrokeColor="@color/box_stroke"
+                app:hintTextColor="@color/white"
+                app:boxStrokeWidth="2dp"
+                app:cursorColor="@color/red"
+                app:errorEnabled="true"
+                app:helperTextEnabled="true"
+                app:helperTextTextColor="@color/red"
+                app:endIconMode="password_toggle"
+                app:endIconDrawable="@drawable/baseline_visibility_24"
+                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox">
 
-    </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editSenha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:padding="25dp"
+                    android:hint="Senha"
+                    android:textColorHint="@color/white"
+                    android:textColorHighlight="@color/white"
+                    android:inputType="textPassword"
+                    />
 
-    <Button
-        android:id="@+id/btEntrar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Entrar"
-        android:textColor="@color/red"
-        android:layout_margin="40dp"
-        android:textStyle="bold"
-        android:padding="15dp"
-        android:background="@drawable/clique_efeito"
-        />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/txtCadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Novo por aqui? Inscreva-se agora"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"
-        />
+            <Button
+                android:id="@+id/btEntrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Entrar"
+                android:textColor="@color/red"
+                android:layout_margin="40dp"
+                android:textStyle="bold"
+                android:padding="15dp"
+                android:background="@drawable/clique_efeito"
+                />
+
+            <TextView
+                android:id="@+id/txtCadastro"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Novo por aqui? Inscreva-se agora"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                />
 
 
-</LinearLayout>
+        </LinearLayout>
 
 </ScrollView>
+</FrameLayout>
