--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorSecondary">@color/red</item>
+        <item name="android:statusBarColor">@color/red</item>
     </style>
 
     <style name="Theme.AppFilmes" parent="Base.Theme.AppFilmes" />
