--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,21 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.HomeFragment"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-       <com.denzcoskun.imageslider.ImageSlider
-           android:id="@+id/image_slider"
-           android:layout_width="wrap_content"
-           android:layout_height="250dp"
-           app:iss_auto_cycle="true"
-           app:iss_delay="1000"
-           app:iss_period="1000"
-           app:iss_text_align="CENTER" />
+       <ScrollView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+       <RelativeLayout
 
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
 
-</RelativeLayout>
+           tools:context=".view.HomeFragment"
+           android:orientation="vertical"
+           >
+
+              <com.denzcoskun.imageslider.ImageSlider
+                  android:id="@+id/image_slider"
+                  android:layout_width="wrap_content"
+                  android:layout_height="250dp"
+                  android:layout_alignParentStart="true"
+                  android:layout_alignParentTop="true"
+                  android:layout_alignParentEnd="true"
+                  app:iss_auto_cycle="true"
+                  app:iss_delay="1000"
+                  app:iss_period="1000"
+                  app:iss_text_align="CENTER" />
+
+              <TextView
+                  android:id="@+id/textViewTop10"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/image_slider"
+                  android:layout_alignParentStart="true"
+                  android:layout_alignParentEnd="true"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginTop="20dp"
+                  android:layout_marginEnd="20dp"
+                  android:layout_marginBottom="20dp"
+                  android:text="Top 10"
+                  android:textSize="25dp"
+                  android:textStyle="bold" />
+
+              <androidx.recyclerview.widget.RecyclerView
+                  android:id="@+id/recyclerViewHorizontal"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/textViewTop10"/>
+
+              <TextView
+                  android:id="@+id/textViewEdicao"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/recyclerViewHorizontal"
+                  android:layout_alignParentStart="true"
+                  android:layout_alignParentEnd="true"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginTop="19dp"
+                  android:layout_marginEnd="16dp"
+                  android:layout_marginBottom="20dp"
+                  android:text="Edicao"
+                  android:textSize="25dp"
+                  android:textStyle="bold" />
+
+              <androidx.recyclerview.widget.RecyclerView
+                  android:id="@+id/recyclerViewHorizontal2"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/textViewEdicao"
+                  />
+
+              <TextView
+                  android:id="@+id/textViewAnimacao"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/recyclerViewHorizontal2"
+                  android:layout_alignParentStart="true"
+                  android:layout_alignParentEnd="true"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginTop="19dp"
+                  android:layout_marginEnd="16dp"
+                  android:layout_marginBottom="20dp"
+                  android:text="Animação"
+                  android:textSize="25dp"
+                  android:textStyle="bold" />
+
+              <androidx.recyclerview.widget.RecyclerView
+                  android:id="@+id/recyclerViewHorizontal3"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_below="@+id/textViewAnimacao"
+                  android:layout_marginBottom="80dp"
+                  />
+
+       </RelativeLayout>
+      </ScrollView>
+</androidx.drawerlayout.widget.DrawerLayout>
