--- a/app/src/main/res/layout/imagem_item.xml
+++ b/app/src/main/res/layout/imagem_item.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.carousel.MaskableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">
-    
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/carouselImageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Título"
+        android:textSize="18dp"
+        android:textAllCaps="true"
+        android:layout_gravity="center"
+        android:textAlignment="center" />
 
 
-
-</com.google.android.material.carousel.MaskableFrameLayout>
+</LinearLayout>
