finalizando processo de Favoritos

--- a/app/src/main/res/layout/imagem_item.xml
+++ b/app/src/main/res/layout/imagem_item.xml
@@ -5,11 +5,27 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <FrameLayout
         android:layout_width="150dp"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop" />
+        android:layout_height="200dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <ImageButton
+            android:id="@+id/favoriteIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="10dp"
+            android:layout_gravity="top|end"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/baseline_favorite_24"
+            android:padding="4dp" /> <!-- Adicione padding para facilitar o toque -->
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -20,6 +36,5 @@
         android:textAllCaps="true"
         android:layout_gravity="center"
         android:textAlignment="center" />
-
 
 </LinearLayout>
