lista de categorias e filmes ok

--- a/app/src/main/res/layout/categoria_item.xml
+++ b/app/src/main/res/layout/categoria_item.xml
@@ -10,8 +10,15 @@
         android:layout_height="wrap_content"
         android:text="Filmes Populares"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textStyle="bold"
-        android:layout_margin="20dp"/>
+        android:layout_margin="10dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtTitulo"
+        />
 
 </LinearLayout>
