--- a/app/src/main/res/layout/imagem_item.xml
+++ b/app/src/main/res/layout/imagem_item.xml
@@ -13,7 +13,8 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/bakgroud_filme"/>
 
         <ImageButton
             android:id="@+id/favoriteIcon"
